Locomotive scroll added

--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="../src/app.css">
+    <link rel="stylesheet" href="../src/lib/locomotive-scroll.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
+  
 </html>
