--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
     <link rel="stylesheet" href="../src/app.css">
-    <link rel="stylesheet" href="../src/lib/locomotive-scroll.css">
+    <!-- <link rel="stylesheet" href="../src/lib/locomotive-scroll.css"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
