--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
     <link rel="stylesheet" href="../src/app.css">
     <!-- <link rel="stylesheet" href="../src/lib/locomotive-scroll.css"> -->
+    <!-- <script src="../src/lib/blotter.min.js"></script>
+    <script src="../src/lib/materials/channelSplitMaterial.js"></script>
+    <script src="../src/lib/materials/slidingDoorMaterial.js"></script> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
