--- a/src/app.html
+++ b/src/app.html
@@ -5,12 +5,11 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
     <link rel="stylesheet" href="../src/app.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/TextPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Flip.min.js"></script>
     <!-- <link rel="stylesheet" href="../src/lib/locomotive-scroll.css"> -->
     <!-- <script src="../src/lib/blotter.min.js"></script>
     <script src="../src/lib/materials/channelSplitMaterial.js"></script>
-    <script src="../src/lib/materials/slidingDoorMaterial.js"></script> -->
+    <script src="../src/lib/materials/slidingDoorMaterial.js"></script>
+    <script src="../src/lib/materials/liquidDistortMaterials.js"></script> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
